finish css and logic

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h1>Car Adventures</h1>
-    <h2>Type "h" to honk, "d" to drive to work,"r" for a long road trip, "t" to get a tune </h2>
+    <h2>Type "h" to honk, "d" to drive to work,"r" for a long road trip, "t" to get a tuneup</h2>
     <h2>see console for car stats</h2>
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQmRZlnKOOlICbWOd-m0AKzwFtepuxXGVA6XhpTJwAH6iGqPIv00g">
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQmRZlnKOOlICbWOd-m0AKzwFtepuxXGVA6XhpTJwAH6iGqPIv00g"  class="center">
 </body>
